# lldap-selfservice-2

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml  flake.nix
migrations/: 001_init.sql
nix/: module.nix
scripts/: dev-smoke-test.sh  with-timeout.sh
src/: auth.rs  config.rs  db.rs  error.rs  ldap.rs  lldap_client.rs  main.rs  state.rs  templates.rs
src/routes/: admin.rs  api.rs  invite.rs  mod.rs
static/: copy.js  style.css  ui.js
templates/: dashboard.html  invite_form.html  invite_success.html  layout_admin.html  layout_public.html  login.html  users.html
templates/partials/: flash.html
