[package]
name = "lldap-selfservice"
version = "0.1.0"
edition = "2021"
description = "Community self-service portal for LLDAP (invites, password reset)"

[dependencies]
anyhow = "1"
askama = "0.12"
askama_axum = "0.4"
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
cookie = { version = "0.18", features = ["secure", "private"] }
time = "0.3"
hex = "0.4"
hmac = "0.12"
ldap3 = { version = "0.11", default-features = false, features = ["sync"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
subtle = "2"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
[package.metadata.askama]
dirs = ["templates"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(askama)', 'cfg(sqlx)'] }
